# memorypool

./: .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  configure.h.in  main.c  run  version.h.in
cmake/: parameters.cmake
cmake/macros/: macro_memorypool_setup_test.cmake  macro_setup_cuda_test.cmake  macro_setup_problem.cmake  macro_setup_python_test_script.cmake  macro_setup_test.cmake
cpu-concept/: CMakeLists.txt  Makefile  demo  demo.c  demo.cpp  fuzzy  fuzzy-test.c  fuzzy.sh  out.out  poolalloc.c  poolalloc.cpp  poolalloc.h
cpu-concept/.cache/clangd/index/: demo.c.2A974760EE6A9DC9.idx  demo.cpp.F6371AE81E8AA506.idx  poolalloc.c.4E59EB893D4E5A87.idx  poolalloc.cpp.88352BE732A757AF.idx  poolalloc.h.9907FC8A6E8329FB.idx
gpu-concept/: CMakeLists.txt  fuzzy-script.py  fuzzy-test.cu  poolalloc.cu  poolalloc.cuh  test.cu
linalg/: .gitignore  CMakeLists.txt  Makefile  X.txt  Y.txt  leastsq.c  leastsq_kkt.c  linalg.h  lubksb.c  ludcmp.c  ludcmp.c.bak  luminv.c  luminv.c.bak  main.c  malloc-macro.h  mmdot.c  mvdot.c  pool-main.c  swap_rows.c  testsame.sh  volume-test  volume-test-pool.c  volume-test.c  volume-test.h  vvdot.c
macros/: CMakeLists.txt  cudamacro.h
malloc-tracker/: CMakeLists.txt  main.c  test  trackedmalloc.c  trackedmalloc.h
phy/: ch4.h  co2.h  conc2frac.c  equilibrate_tp.c  example1.cu  example2.cu  frac2conc.c  h2o.h  h2s.h  h2s_na.h  h2s_nh3.h  k_cl.h  nh3.h  nh3_h2s.h  saturation_adjustment.c  saturation_adjustment.h  sio.h  so2.h  svp_ideal.h  thermo.h  thermo_prop.c
src/: CMakeLists.txt  alloc.h  version.h
src/cpu/: CMakeLists.txt  Makefile  demo.c  fuzzy.sh  poolalloc.c  poolalloc.h
src/gpu/: CMakeLists.txt  fuzzy-test.cu  poolalloc.cu  poolalloc.cuh
src/linalg/: Makefile  leastsq.h  leastsq_kkt.h  lubksb.h  ludcmp.h  luminv.h  mmdot.c  mmdot.h  mvdot.c  mvdot.h  testsame.sh  volume-test.h  vvdot.c  vvdot.h
src/math/: leastsq.h  leastsq_kkt.h  linalg.h  lubksb.h  ludcmp.h  luminv.h  mmdot.h  mvdot.h  vvdot.h
src/mtracker/: trackedmalloc.c
src/tracker/: Makefile  test-malloc-tracker.c
test/: libops.c  test.py
tests/: CMakeLists.txt  blocksize-test-py.py  demo.cpp  fuzzy-script-cuda.py  fuzzy-test-gpu.cu  fuzzy-test.cpp  linalg-gpu.cu  linalg-test.c  linalg-test.cpp  linalg.cu  main.c  performance-test-gpu.cu  performance-test-py.py  test-cuda.cu  test.py  volume-test-pool.c  volume-test-pool.cpp  volume-test.cpp
